[package]
name = "centrifurust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/server.rs"

[lib]
name = "centrifuge"
path = "src/centrifuge.rs"

[dependencies]

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.4.2" # Rust gRPC implementation
prost = "0.7.0" # Rust Protocol Buffers implementation
prost-types = "0.7.0" # Contains definitions of Protocol Buffers well-known types
dashmap = "4.0.2"
[build-dependencies]
tonic-build = "0.4.2"
